[package]
name = "spotify-remove-duplicates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
open = "5.0.0"
itertools = "0.11.0"
futures-util = "0.3.28"
indicatif = "0.17.6"
dialoguer = {version = "0.10.4", features = []}

[dependencies.rspotify]
version = "0.12.0"
default-features = false
features = ["client-ureq", "ureq-rustls-tls"]